# SafetyReasoningDataEvol

./: .gitattributes  .gitignore  H-CoT-demo.ipynb  LICENSE  README.md  answer_reformat.ipynb  answer_rephrase.ipynb  category-accu.ipynb  category-validation.ipynb  darkcite.ipynb  download_data.ipynb  filter.ipynb  filter_non_refusal.ipynb  meta-data.ipynb  mix-intent.ipynb  process_RR.ipynb  pyproject.toml  requirements.txt
data/processed/: .gitattributes  R2D-R1.json  STAIR-SFT.json  STAIR-SFT_diverse.json  circuit_breakers_train_diverse.json  circuitbreaker_val.json  circuitbreaker_val_metadata.json  circuitbreaker_val_metadata_final.json  circuitbreaker_val_yes.json  xstest_v2_completions_gpt4_gpteval.csv
script/evaluate/: eval_reasoning.sh  eval_reasoning_efficiency.sh  prompt_attack.sh  prompt_attack_efficiency.sh
script/evol/: answer_evol.sh  data_evol.sh
script/train/: iterative_probe_train.sh  llama-7b.sh  llama3-8b.sh  lora_train.sh  mistral-7b-v2.sh  ort.sh  ort_anchor.sh  ort_wo_retain.sh  prob.sh  r2d-llama3-8b.sh  r2d.sh  rr-llama3-8b.sh  sam-llama3-8b.sh  sam.sh  scot-llama3-8b.sh
src/data_utils/: RobustSCoT_datasets.py  harmful_datasets.py  reasoning_datasets.py  safety_datasets.py
src/evaluate/: __init__.py  adv_attack.py  direct_prompts.py  evaluate_attack.py  evaluate_common_reasoning.py  evaluate_common_reasoning_efficiency.py  evaluate_harmful.py  evaluate_harmful_efficiency.py  evaluate_llama3guard.py  evaluate_loss.py  prompt_attack.py
src/evol/: __init__.py  answer_evol.py  answer_evol_prompt.py  answer_metadata.py  answers.py  (+9 more)
(+49 files in other folders)
